--- a/index.html
+++ b/index.html
@@ -29,14 +29,21 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">
                         <i class="fas fa-fw fa-tachometer-alt"></i>
-                        <span>Dashboard</span>
+                        <span style="font-size: 12pt">Особиста статистика</span>
                     </a>
                 </li>
                 <!-- Divider -->
                 <hr class="sidebar-divider"/>
                 <!-- Heading -->
-                <div class="sidebar-heading">Interface
-			</div>
+                <div class="sidebar-heading"> 
+		    	</div>
+                <li class="nav-item active">
+                    <a class="nav-link">
+                        <span style="font-size: 12pt"> Анкет - 0</span><br>
+                        <span style="font-size: 12pt"> Теплих - 0 </span><br>
+                        <span style="font-size: 12pt"> Зацікавлених - </span>
+                    </a>
+                </li>
                 <hr class="sidebar-divider d-none d-md-block"/>
             </ul>
             <div id="content-wrapper" class="d-flex flex-column">
