--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <meta name="author" content=""/>
         <title>SB Admin</title>
         <link crossorigin='anonymous' href='https://use.fontawesome.com/releases/v5.8.2/css/all.css' integrity='sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay' rel='stylesheet'/>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="css/sb-admin-2.min.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body id="page-top">
         <!-- Page Wrapper -->
@@ -91,33 +91,31 @@
                                             <button name="action" class="btn btn-outline-danger" value="liquidated">ЛІКВІДОВАНІ</button>
                                         </div>
                                         <div class="card-body">
-                                            <p>
+                                           <div class="main">                                        
+                                            <div class="field">
                                                 <label for="source">Джерело :</label>
                                                 <input id="source" name="source" size="50" type="text" required>
-                                            </p>
-                                            <p>
+                                            </div>
+                                            <div class="field">
                                                 <label for="clientname">Назва Клієнта :</label>
                                                 <input id="clientname" name="clientname" size="50" type="text" required>
-                                                <span title="склад">
-                                                    <input type="text" readonly value=" склад" name="category" size="10">
-                                                </span>
-                                            </p>
-                                            <p>
+                                            </div>
+                                            <div class="field">
                                                 <label for="clientaddr">Адреса Клієнта :</label>
                                                 <input id="clientaddr" name="clientaddr" size="50" type="text" required>
-                                            </p>
-                                            <p>
+                                            </div>
+                                            <div class="field">
                                                 <label for="clientemail">E-mail Клієнта :</label>
                                                 <input id="clientemail" name="clientemail" size="50" type="text" placeholder="asdasfg@gmail.com" required>
-                                            </p>
-                                            <p>
+                                            </div>
+                                            <div class="field"> 
                                                 <label for="clientphonetocheck">Тел. Клієнта :</label>
                                                 <input id="clientphonetocheck" name="clientphonetocheck" size="50" type="text" pattern="[0-9,]{12,}" placeholder="3806542833" required>
-                                            </p>
-                                            <p>
+                                            </div>
+                                            <div class="field">
                                                 <label for="contactperson">Контакт. особа :</label>
                                                 <input id="contactperson" name="contactperson" size="50" type="text" required>
-                                            </p>
+                                            </div>
 
                                             <div class="form-group"> 
                                                 <select class="custom-select">
@@ -129,6 +127,7 @@
                                                 </select>
                                             </div>
                                         </div>
+                                        </div> 
                                     </div>
                                 </div>
                                 <div class="col-lg-5 mb-4">
