--- a/index.html
+++ b/index.html
@@ -37,17 +37,20 @@
                 <li class="nav-item active">
                     <a class="nav-link">
                         <i class="fas fa-envelope"></i>
-                        <span style="font-size: 12pt"> Анкет - 0</span><br>
+                        <span style="font-size: 12pt">Анкет - 0</span>
+                        <br>
                         <i class="fab fa-hotjar"></i>
-                        <span style="font-size: 12pt"> Теплих - 0 </span><br>
+                        <span style="font-size: 12pt">Теплих - 0 </span>
+                        <br>
                         <i class="fas fa-user-plus"></i>
-                        <span style="font-size: 12pt"> Зацікавлених - </span><br>
+                        <span style="font-size: 12pt">Зацікавлених - </span>
+                        <br>
                         <i class="fas fa-list"></i>
-                        <span style="font-size: 12pt"> Список продактів: - </span>
+                        <span style="font-size: 12pt">Список продактів: - </span>
                         <hr>
-                            <i class="fas fa-exchange-alt"></i>
-                            <span style="font-size: 12pt">Трансфери :</span>
-                            <hr>
+                        <i class="fas fa-exchange-alt"></i>
+                        <span style="font-size: 12pt">Трансфери :</span>
+                        <hr>
                         <button name="txaction" value="1004" type="button" class="btn btn-success">ТРАНСФЕР(1004)</button>
                         <hr>
                         <button name="txaction" value="1002" type="button" class="btn btn-success">ТРАНСФЕР(1002)</button>
@@ -58,7 +61,6 @@
                     </a>
                 </li>
                 <hr class="sidebar-divider d-none d-md-block"/>
-               
             </ul>
             <div id="content-wrapper" class="d-flex flex-column">
                 <div id="content">
@@ -69,7 +71,7 @@
                             <!-- Nav Item - User Information -->
                             <li class="nav-item dropdown no-arrow">
                                 <a class="nav-link dropdown-toggle" href="#" onclick="Main" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fas fa-sign-out-alt "> На Головну</i>
+                                    <i class="fas fa-sign-out-alt ">На Головну</i>
                                 </a>
                             </li>
                         </ul>
@@ -84,6 +86,7 @@
                                 <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
                                     <i class="fas fa-undo fa-sm text-white-50"></i>
                                     Оновити   
+                                
                                 </a>
                             </div>
                             <!-- Content Row -->
@@ -102,51 +105,70 @@
                                             <button name="action" class="btn btn-outline-danger" value="liquidated">ЛІКВІДОВАНІ</button>
                                         </div>
                                         <div class="card-body">
-                                           <div class="main">                                        
-                                            <div class="field">
-                                                <label for="source">Джерело :</label>
-                                                <input id="source" name="source" size="60" type="text" required>
-                                            </div>
-                                            <div class="field">
-                                                <label for="clientname">Назва Клієнта :</label>
-                                                <input id="clientname" name="clientname" size="60" type="text" required>
-                                            </div>
-                                            <div class="field">
-                                                <label for="clientaddr">Адреса Клієнта :</label>
-                                                <input id="clientaddr" name="clientaddr" size="60" type="text" required>
-                                            </div>
-                                            <div class="field">
-                                                <label for="clientemail">E-mail Клієнта :</label>
-                                                <input id="clientemail" name="clientemail" size="60" type="text" placeholder="asdasfg@gmail.com" required>
-                                            </div>
-                                            <div class="field"> 
-                                                <label for="clientphonetocheck">Тел. Клієнта :</label>
-                                                <input id="clientphonetocheck" name="clientphonetocheck" size="60" type="text" pattern="[0-9,]{12,}" placeholder="3806542833" required>
-                                            </div>
-                                            <div class="field">
-                                                <label for="contactperson">Контакт. особа :</label>
-                                                <input id="contactperson" name="contactperson" size="60" type="text" required>
-                                            </div>
-                                                <div class="form-group"> 
+                                            <div class="main">
+                                                <div class="field">
+                                                    <label for="source">Джерело :</label>
+                                                    <input id="source" name="source" size="60" type="text" required>
+                                                </div>
+                                                <div class="field">
+                                                    <label for="clientname">Назва Клієнта :</label>
+                                                    <input id="clientname" name="clientname" size="60" type="text" required>
+                                                </div>
+                                                <div class="field">
+                                                    <label for="clientaddr">Адреса Клієнта :</label>
+                                                    <input id="clientaddr" name="clientaddr" size="60" type="text" required>
+                                                </div>
+                                                <div class="field">
+                                                    <label for="clientemail">E-mail Клієнта :</label>
+                                                    <input id="clientemail" name="clientemail" size="60" type="text" placeholder="asdasfg@gmail.com" required>
+                                                </div>
+                                                <div class="field">
+                                                    <label for="clientphonetocheck">Тел. Клієнта :</label>
+                                                    <input id="clientphonetocheck" name="clientphonetocheck" size="60" type="text" pattern="[0-9,]{12,}" placeholder="3806542833" required>
+                                                </div>
+                                                <div class="field">
+                                                    <label for="contactperson">Контакт. особа :</label>
+                                                    <input id="contactperson" name="contactperson" size="60" type="text" required>
+                                                </div>
+                                                <div class="form-group">
                                                     <select class="custom-select">
-                                                    <option  selected="" >Виберіть додаткову інформанцію</option>
-                                                    <option id="noteselect1" value>Пропозиції роз...</option>
-                                                    <option id="noteselect2" value>Зацікавляться ...</option>
-                                                    <option id="noteselect3" value>Розмова з ОПР ...</option>
-                                                    <option id="noteselect4" value>Спілкувались з </option>
+                                                        <option selected="">Виберіть додаткову інформанцію</option>
+                                                        <option id="noteselect1" value>Пропозиції роз...</option>
+                                                        <option id="noteselect2" value>Зацікавляться ...</option>
+                                                        <option id="noteselect3" value>Розмова з ОПР ...</option>
+                                                        <option id="noteselect4" value>Спілкувались з </option>
                                                     </select>
                                                 </div>
-                                            <div >
-                                                <textarea name="entrynote" cols="80" rows="3" placeholder=""></textarea>
+                                                <div>
+                                                    <textarea name="entrynote" cols="82" rows="3" placeholder=""></textarea>
+                                                </div>
+                                                <div class="form-group">
+                                                    <select name="clientreaction" class="custom-select">
+                                                        <option selected="">Виберіть реакцію: </option>
+                                                        <option value="interested">Зацікавлений</option>
+                                                        <option value="warm">Теплий</option>
+                                                        <option value="notinterested">Не зацікавлений</option>
+                                                        <option value="alreadyclient">Вже є клієнтом</option>
+                                                        <option value="prejudiced">Упереджений</option>
+                                                        <option value="wrongposition">Хибне позиціонування</option>
+                                                    </select>
+                                                </div>
+                                                <div class="field">
+                                                    <label for="recallfield">Коли передзвон: </label>
+                                                    <input id="recallfield" name="recalltime" class="hasDatepicker" autocomplete="off" value="2016-10-04 16:02" size="60" type="text" >
+                                                </div>
+                                                <br>
+                                                <button type="button" class="btn btn-info" name="action" value="saverecall">Передзвонити </button>
+                                                <hr>
+                                                <button style="float:right" type="button" class="btn btn-primary btn-lg" name="action" value="saveanketa">ЗБЕРЕГТИ АНКЕТУ</button>
                                             </div>
                                         </div>
-                                        </div> 
                                     </div>
                                 </div>
                                 <div class="col-lg-5 mb-4">
                                     <!-- Illustrations -->
                                     <div class="card shadow mb-4">
-                                        <div class="card-header py-3">
+                                        <div class="card-header py-2">
                                             <h6 class="m-0 font-weight-bold text-primary">Для нотатків
 									</h6>
                                         </div>
@@ -156,7 +178,7 @@
                                     </div>
                                     <!-- Approach -->
                                     <div class="card shadow mb-4">
-                                        <div class="card-header py-3">
+                                        <div class="card-header py-2">
                                             <h6 class="m-0 font-weight-bold text-primary">Записи скріптів
 									</h6>
                                         </div>
