--- a/index.html
+++ b/index.html
@@ -108,27 +108,27 @@
                                             <div class="main">
                                                 <div class="field">
                                                     <label for="source">Джерело :</label>
-                                                    <input id="source" name="source" size="60" type="text" required>
+                                                    <input id="source" name="source" size="60" type="text" >
                                                 </div>
                                                 <div class="field">
                                                     <label for="clientname">Назва Клієнта :</label>
-                                                    <input id="clientname" name="clientname" size="60" type="text" required>
+                                                    <input id="clientname" name="clientname" size="60" type="text" >
                                                 </div>
                                                 <div class="field">
                                                     <label for="clientaddr">Адреса Клієнта :</label>
-                                                    <input id="clientaddr" name="clientaddr" size="60" type="text" required>
+                                                    <input id="clientaddr" name="clientaddr" size="60" type="text" >
                                                 </div>
                                                 <div class="field">
                                                     <label for="clientemail">E-mail Клієнта :</label>
-                                                    <input id="clientemail" name="clientemail" size="60" type="text" placeholder="asdasfg@gmail.com" required>
+                                                    <input id="clientemail" name="clientemail" size="60" type="text" placeholder="asdasfg@gmail.com" >
                                                 </div>
                                                 <div class="field">
                                                     <label for="clientphonetocheck">Тел. Клієнта :</label>
-                                                    <input id="clientphonetocheck" name="clientphonetocheck" size="60" type="text" pattern="[0-9,]{12,}" placeholder="3806542833" required>
+                                                    <input id="clientphonetocheck" name="clientphonetocheck" size="60" type="text" pattern="[0-9,]{12,}" placeholder="3806542833" >
                                                 </div>
                                                 <div class="field">
                                                     <label for="contactperson">Контакт. особа :</label>
-                                                    <input id="contactperson" name="contactperson" size="60" type="text" required>
+                                                    <input id="contactperson" name="contactperson" size="60" type="text" >
                                                 </div>
                                                 <div class="form-group">
                                                     <select class="custom-select">
