--- a/index.html
+++ b/index.html
@@ -178,7 +178,11 @@
                                             <a href="/cgi-bin/readsms.php?DBF54EGbvbeaeUIE765f5=bkguiiueefFV76539394UB8uhuF" target="_blank"></a>
                                             <button id="getRECIVEsms" type="button" class="btn btn-outline-info btn-sm" value>Читати</button>
                                             <button id="sendsms" type="button" class="btn btn-outline-info btn-sm" value>Надіслати</button>
-                                            <button id="waitsms" type="button" class="btn btn-outline-info btn-sm" value>Чекати</button>
+                                            <button id="waitsms" type="button" class="btn btn-outline-info btn-sm" value>Чекати</button><br>
+                                                <hr>
+                                            <span>Nomera:</span>
+                                             <button  type="button" class="btn btn-outline-info btn-sm" >3806542833    </button>
+                                            <button  type="button" class="btn btn-outline-info btn-sm" >3806542833    </button>
                                         </div>
                                     </div>
                                     <!-- Illustrations -->
