--- a/index.html
+++ b/index.html
@@ -133,9 +133,11 @@
                                                 <button name="action" class="btn btn-outline-danger btn-sm" value="noanswer">НЕ ВІДПОВІВ</button>
                                                 <button name="action" class="btn btn-outline-danger btn-sm" value="wrongnumber">НЕВІРНИЙ №</button>
                                                 <button name="action" class="btn btn-outline-danger btn-sm" value="salfwrongname">НЕВІРНА АНКЕТА</button>
-                                                <button name="action" class="btn btn-outline-danger btn-sm" value="noanswer_rc">ПІЗНІШЕ </button>
+                                                <button name="action" class="btn btn-outline-danger btn-sm" value="noanswer_rc">ПІЗНІШЕ </button><br>
                                                 <button name="action" class="btn btn-outline-danger btn-sm" value="double">ДУБЛЬ</button>
                                                 <button name="action" class="btn btn-outline-danger btn-sm" value="liquidated">ЛІКВІДОВАНІ</button>
+                                                <button name="action" class="btn btn-outline-danger btn-sm" value="liquidated">АКТУАЛЬНО</button>
+                                                <button name="action" class="btn btn-outline-danger btn-sm" value="liquidated">НЕ АКТУАЛЬНО</button>
                                                 <br>
                                                 <hr>
                                                 <div class="field">
