--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 																</div>
 														</section>
 														<section class="accordion_item">
-															<h3 class="title_block">Реакція :</h3>
+															<h3 class="title_block">Реакція, Трансфери, Календар : </h3>
 															<div class="info">
                                                                
                                                                     <a href="#yes" class="btn btn-primary " role="button" aria-pressed="true">Зацікавлений</a>
