--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <title>SB Admin</title>
         <link crossorigin='anonymous' href='https://use.fontawesome.com/releases/v5.8.2/css/all.css' integrity='sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay' rel='stylesheet'/>
         <link href="css/sb-admin-2.min.css" rel="stylesheet"/>
-        <link rel="stylesheet" href="index2.css">
-        <link rel="stylesheet" href="bootstrap.css">
+        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/bootstrap.css">
     </head>
     <body class="container" id="page-top">
         <input type="checkbox" id="nav-toggle" hidden>
@@ -315,8 +315,8 @@
             </div>
             <!-- End of Content Wrapper -->
         </div>
-        <script src="jquery.js"></script>
-        <script src="jquery.maskedinput.js"></script>
-        <script src="index1.js"></script>
+        <script src="js/jquery.js"></script>
+        <script src="js/jquery.maskedinput.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
